# cs452

./: .gitmodules
ESP32/V3-ESP32-7SegTest/: V3-ESP32-7SegTest.ino
ESP32/V3-ESP32-DIP8Test/: V3-ESP32-DIP8Test.ino
ESP32/assign14-corg7983/src/: main.cpp
ESP32/assign15-corg7983/: platformio.ini
ESP32/assign15-corg7983/src/: main.cpp
ESP32/assign16-corg7983/: platformio.ini
ESP32/assign16-corg7983/include/: main.h
ESP32/assign16-corg7983/src/: main.cpp
ESP32/neopixelTest/src/: PixelFunctions.h  esp32_digital_led_lib.cpp
ESP32/testSuite/include/: main.h
ESP32/testSuite/src/: main.cpp
ESP32/tests/Air530Test/src/: main.cpp
ESP32/tests/GPSTest/: platformio.ini
ESP32/tests/GPSTest/src/: main.cpp
ESP32/tests/V3-ESP32-Tests/V3-ESP32-3BUTTONTest/: V3-ESP32-3BUTTONTest.ino
ESP32/tests/V3-ESP32-Tests/V3-ESP32-RGBWstrandtest/: PixelFunctions.h  V3-ESP32-RGBWstrandtest.ino
ESP32/tests/testSuite/include/: main.h
ESP32/tests/testSuite/src/: main.cpp
V3-ESP32-I2CScannerTest/: V3-ESP32-I2CScannerTest.ino
neopixelTest/: platformio.ini
neopixelTest/src/: main.cpp
pico/Vandalino3PicoTestSuite/: V3-I2CHDC1080.uf2  V3-PUSHBUTTONTEST.uf2
pico/Vandalino3PicoTestSuite/V3-7SEGTEST/: CMakeLists.txt  main.c  main.h
pico/Vandalino3PicoTestSuite/V3-DIPSWITCHTEST/: CMakeLists.txt  main.c
pico/Vandalino3PicoTestSuite/V3-I2CHDC1080/: CMakeLists.txt  hdc1080.c  mpu6050_i2c.c
pico/Vandalino3PicoTestSuite/V3-I2CSCANNER/: CMakeLists.txt  bus_scan.c
pico/Vandalino3PicoTestSuite/V3-PIXELTEST/: CMakeLists.txt  example.cpp  pico_sdk_import.cmake
pico/Vandalino3PicoTestSuite/V3-PUSHBUTTONTEST/: CMakeLists.txt  main.c  main.h
pico/assign02-corg7983/: CMakeLists.txt  Makefile  assign02-corg7983.tar  main.c  main.h
pico/assign03-corg7983/: CMakeLists.txt  SUBMITTED_assign03-corg7983.tar  main.c
pico/assign04-corg7983/: CMakeLists.txt  main.c  main.h
pico/assign04-corg7983/versions/base-10/: SUBMITTED_assign04.03-corg7983.tar  assign04.01-corg7983.tar  assign04.02-corg7983.tar  assign04.04-corg7983.tar  main.c_OLD_BASE_10
pico/assign07-corg7983/: CMakeLists.txt  main.c
pico/assign07-corg7983/assign07-versions/: assign07.01-corg7983.tar  assign07.02-corg7983.tar
pico/assign10-corg7983/: CMakeLists.txt  main.c
pico/assign10-corg7983/assign10-versions/: assign10-0.1-corg7983.tar  assign10-0.2-corg7983.tar
pico/assign11-corg8983/: CMakeLists.txt  FreeRTOSConfig.h  main.c  main.cpp
pico/assign11-corg8983/assign11-versions/: assign11-0.1-corg7983.tar  assign11.0.2-corg7983.tar
